Fixed layout issues

--- a/src/assets/scss/base/_typography.scss
+++ b/src/assets/scss/base/_typography.scss
@@ -5,7 +5,7 @@
 body,
 html {
   font-family: $work-sans;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 1;
 
